<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="prenosDat"
        android:text="@string/develop" />

    <Button
        android:id="@+id/training"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/training" />

    <Button
        android:id="@+id/testing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testing" />

</LinearLayout>